docs: sudoku sections

--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Solve a diagonal Sudoku\n",
+    "\n",
+    "Simple notebok version of the first project of Udacity's Artificial Intelligence Nanodegree\n",
+    "\n",
+    "Source: https://github.com/udacity/AIND-Sudoku"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup the diagonal Sudoku problem"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,45 +26,17 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Solve a diagonal Sudoku with AI\n",
-    "\n",
-    "Source: https://github.com/udacity/AIND-Sudoku\n",
-    "\n",
-    "The data consists of a text file of diagonal sudokus for you to solve.\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
     "rows = 'ABCDEFGHI'\n",
-    "cols = '123456789'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "cols = '123456789'\n",
+    "\n",
     "def cross(a, b):\n",
     "    \"\"\"\n",
     "    Input:  a, b (string, tuple, list .. )\n",
     "    Output: cross list of all elements of a combined with b.\n",
     "            Example: a='AB', b = '12' -> ['A1', 'A2', 'B1', 'B2']\n",
     "    \"\"\"\n",
-    "    return [s + t for s in a for t in b]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    return [s + t for s in a for t in b]\n",
+    "\n",
     "boxes = cross(rows, cols)\n",
     "row_units = [cross(r, cols) for r in rows]\n",
     "column_units = [cross(rows, c) for c in cols]\n",
@@ -59,8 +49,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input\n",
+    "\n",
+    "A String representing a sudoku grid. Example: '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3' <br>\n",
+    "The function below translates the string into a useful dictionary grid variable"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A1': '2', 'A2': '123456789', 'A3': '123456789', 'A4': '123456789', 'A5': '123456789', 'A6': '123456789', 'A7': '123456789', 'A8': '123456789', 'A9': '123456789', 'B1': '123456789', 'B2': '123456789', 'B3': '123456789', 'B4': '123456789', 'B5': '123456789', 'B6': '6', 'B7': '2', 'B8': '123456789', 'B9': '123456789', 'C1': '123456789', 'C2': '123456789', 'C3': '1', 'C4': '123456789', 'C5': '123456789', 'C6': '123456789', 'C7': '123456789', 'C8': '7', 'C9': '123456789', 'D1': '123456789', 'D2': '123456789', 'D3': '6', 'D4': '123456789', 'D5': '123456789', 'D6': '8', 'D7': '123456789', 'D8': '123456789', 'D9': '123456789', 'E1': '3', 'E2': '123456789', 'E3': '123456789', 'E4': '123456789', 'E5': '9', 'E6': '123456789', 'E7': '123456789', 'E8': '123456789', 'E9': '7', 'F1': '123456789', 'F2': '123456789', 'F3': '123456789', 'F4': '6', 'F5': '123456789', 'F6': '123456789', 'F7': '4', 'F8': '123456789', 'F9': '123456789', 'G1': '123456789', 'G2': '4', 'G3': '123456789', 'G4': '123456789', 'G5': '123456789', 'G6': '123456789', 'G7': '8', 'G8': '123456789', 'G9': '123456789', 'H1': '123456789', 'H2': '123456789', 'H3': '5', 'H4': '2', 'H5': '123456789', 'H6': '123456789', 'H7': '123456789', 'H8': '123456789', 'H9': '123456789', 'I1': '123456789', 'I2': '123456789', 'I3': '123456789', 'I4': '123456789', 'I5': '123456789', 'I6': '123456789', 'I7': '123456789', 'I8': '123456789', 'I9': '3'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sudoku = '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3'\n",
+    "grid_sudoku = grid_values(sudoku)\n",
+    "print(grid_sudoku)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display Sudoku"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,15 +166,19 @@
     }
    ],
    "source": [
-    "sudoku = '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3'\n",
-    "grid_sudoku = grid_values(sudoku)\n",
-    "print(\"\\n  Sudoku:\\n\")\n",
     "display(grid_sudoku)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving strategies "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -229,8 +259,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reduce Sudoku\n",
+    "\n",
+    "Main loop called from the seach strategy. It will try to solve the puzzle by calling the above strategies iteratively"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -269,11 +308,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solve Sudoku using Depth-first search"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def search(values):\n",
@@ -300,24 +344,32 @@
     "        if attempt:\n",
     "            return attempt\n",
     "\n",
-    "\n",
-    "\"\"\"\n",
-    "    Find the solution to a Sudoku grid.\n",
-    "    Input:  grid(string): a string representing a sudoku grid.\n",
-    "                Example: '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3'\n",
-    "    Output: The dictionary representation of the final sudoku grid. False if no solution exists.\n",
-    "\"\"\""
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "  Sudoku:\n",
+      "\n",
+      "2     |      |      \n",
+      "      |    6 |2     \n",
+      "    1 |      |  7   \n",
+      "------+------+------\n",
+      "    6 |    8 |      \n",
+      "3     |  9   |    7 \n",
+      "      |6     |4     \n",
+      "------+------+------\n",
+      "  4   |      |8     \n",
+      "    5 |2     |      \n",
+      "      |      |    3 \n",
       "\n",
       "  Solution found: \n",
       "\n",
@@ -336,14 +388,38 @@
     }
    ],
    "source": [
-    "solution = search(grid_sudoku)\n",
+    "def solve(string_sudoku):\n",
+    "    \"\"\"\n",
+    "        Find the solution to a Sudoku grid.\n",
+    "        Input:  grid(string): a string representing a sudoku grid.\n",
+    "                    Example: '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3'\n",
+    "        Output: The dictionary representation of the final sudoku grid. False if no solution exists.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    grid_sudoku = grid_values(sudoku)\n",
     "\n",
-    "if solution:\n",
-    "    print(\"\\n  Solution found: \\n\")\n",
+    "    print(\"\\n  Sudoku:\\n\")\n",
+    "    display(grid_sudoku)\n",
+    "\n",
+    "    solution = search(grid_sudoku)\n",
+    "    if solution:\n",
+    "        print(\"\\n  Solution found: \\n\")\n",
+    "    else:\n",
+    "        print(\"\\n  Solution not found: \\n\")\n",
     "    display(solution)\n",
-    "else:\n",
-    "    print(\"\\n  Solution not found: \\n\")"
+    "\n",
+    "sudoku = '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3'\n",
+    "solve(sudoku)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
