--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -349,13 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "\n",
       "  Sudoku:\n",
       "\n",
@@ -383,7 +384,36 @@
       "------+------+------\n",
       "6 4 2 |3 7 9 |8 1 5 \n",
       "9 3 5 |2 8 1 |7 6 4 \n",
-      "7 1 8 |5 6 4 |9 2 3 \n"
+      "7 1 8 |5 6 4 |9 2 3 \n",
+      "\n",
+      "\n",
+      "  Sudoku:\n",
+      "\n",
+      "  2   |8     |4 9 3 \n",
+      "      |3 9 2 |      \n",
+      "      |    5 |      \n",
+      "------+------+------\n",
+      "3     |      |      \n",
+      "      |4 5 1 |      \n",
+      "      |      |    6 \n",
+      "------+------+------\n",
+      "      |5     |      \n",
+      "      |1 2 7 |      \n",
+      "2 5 1 |    9 |  3   \n",
+      "\n",
+      "  Solution found: \n",
+      "\n",
+      "7 2 5 |8 1 6 |4 9 3 \n",
+      "4 8 6 |3 9 2 |5 1 7 \n",
+      "1 3 9 |7 4 5 |6 8 2 \n",
+      "------+------+------\n",
+      "3 7 4 |2 6 8 |9 5 1 \n",
+      "6 9 2 |4 5 1 |3 7 8 \n",
+      "5 1 8 |9 7 3 |2 4 6 \n",
+      "------+------+------\n",
+      "8 6 7 |5 3 4 |1 2 9 \n",
+      "9 4 3 |1 2 7 |8 6 5 \n",
+      "2 5 1 |6 8 9 |7 3 4 \n"
      ]
     }
    ],
@@ -398,7 +428,7 @@
     "    \n",
     "    grid_sudoku = grid_values(sudoku)\n",
     "\n",
-    "    print(\"\\n  Sudoku:\\n\")\n",
+    "    print(\"\\n\\n  Sudoku:\\n\")\n",
     "    display(grid_sudoku)\n",
     "\n",
     "    solution = search(grid_sudoku)\n",
@@ -408,18 +438,13 @@
     "        print(\"\\n  Solution not found: \\n\")\n",
     "    display(solution)\n",
     "\n",
-    "sudoku = '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3'\n",
-    "solve(sudoku)"
+    "# Add custom doagonal sudokus\n",
+    "    sudokus = ['2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3',\n",
+    "            '.2.8..493...392........5...3...........451...........6...5........127...251..9.3.']\n",
+    "\n",
+    "for sudoku in sudokus:\n",
+    "    solve(sudoku)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
