fix: sudoku list definition

--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -148,9 +148,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  Sudoku:\n",
-      "\n",
       "2     |      |      \n",
       "      |    6 |2     \n",
       "    1 |      |  7   \n",
@@ -317,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def search(values):\n",
@@ -349,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -434,12 +433,12 @@
     "    solution = search(grid_sudoku)\n",
     "    if solution:\n",
     "        print(\"\\n  Solution found: \\n\")\n",
+    "        display(solution)\n",
     "    else:\n",
     "        print(\"\\n  Solution not found: \\n\")\n",
-    "    display(solution)\n",
     "\n",
     "# Add custom doagonal sudokus\n",
-    "    sudokus = ['2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3',\n",
+    "sudokus = ['2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3',\n",
     "            '.2.8..493...392........5...3...........451...........6...5........127...251..9.3.']\n",
     "\n",
     "for sudoku in sudokus:\n",
