--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#  Solve a diagonal Sudoku\n",
     "\n",
-    "Simple notebok version of the first project of Udacity's Artificial Intelligence Nanodegree\n",
+    "Simple notebook version of the first project of Udacity's Artificial Intelligence Nanodegree\n",
     "\n",
     "Source: https://github.com/udacity/AIND-Sudoku"
    ]
