feat: solve isolation agent

--- a/isolation_player.ipynb
+++ b/isolation_player.ipynb
@@ -5,15 +5,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Build a Game-playing Agent\n",
+    "# Game-playing Agent\n",
     "\n",
-    "Student: Angel Martinez-Tenor <br/>\n",
-    "Artificial Intelligence Nanodegree - Udacity <br/>\n",
-    "February 26, 2017 <br/>\n",
+    "Notebook version solving **Build a Game-playing Agent** from Udacity's Artificial Intelligence Nanodegree project <br>\n",
+    "Source: https://github.com/udacity/AIND-Isolation\n",
     "\n",
-    "## Synopsis\n",
-    "\n",
-    "In this project, students will develop an adversarial search agent to play the game \"Isolation\".  Students only need to modify code in the `game_agent.py`, however, code is included for example player and evaluation functions for you to review and test against in the other files.\n",
+    "**Goal**: Implement an effective adversarial search agent to play the game **Isolation**\n",
     "\n",
     "Isolation is a deterministic, two-player game of perfect information in which the players alternate turns moving a single piece from one cell to another on a board.  Whenever either player occupies a cell, that cell becomes blocked for the remainder of the game.  The first player with no remaining legal moves loses, and the opponent is declared the winner.\n",
     "\n",
@@ -21,43 +18,17 @@
     "\n",
     "Additionally, agents will have a fixed time limit each turn to search for the best move and respond.  If the time limit expires during a player's turn, that player forfeits the match, and the opponent wins.\n",
     "\n",
-    "These rules are implemented in the `isolation.Board` class provided in the repository. \n",
-    "\n",
-    "\n",
-    "- `CustomPlayer.minimax()`: implement minimax search\n",
-    "- `CustomPlayer.alphabeta()`: implement minimax search with alpha-beta pruning\n",
-    "- `CustomPlayer.get_move()`: implement fixed-depth and iterative deepening search\n",
-    "- `custom_score()`: implement your own position evaluation heuristic\n",
-    "\n",
-    "\n",
-    "Effectiveness of your custom_score heuristic.  The script measures relative performance of your agent (called \"Student\") in a round-robin tournament against several other pre-defined agents.  The Student agent uses time-limited Iterative Deepening and the custom_score heuristic you wrote.\n",
-    "\n",
-    "The performance of time-limited iterative deepening search is hardware dependent (faster hardware is expected to search deeper than slower hardware in the same amount of time).  The script controls for these effects by also measuring the baseline performance of an agent called \"ID_Improved\" that uess Iterative Deepening and the improved_score heuristic from `sample_players.py`.  Your goal is to develop a heuristic such that Student outperforms ID_Improved.\n",
-    "\n",
-    "The tournament opponents are listed below. (See also: sample heuristics and players defined in sample_players.py)\n",
-    "\n",
-    "- Random: An agent that randomly chooses a move each turn.\n",
-    "- MM_Null: CustomPlayer agent using fixed-depth minimax search and the null_score heuristic\n",
-    "- MM_Open: CustomPlayer agent using fixed-depth minimax search and the open_move_score heuristic\n",
-    "- MM_Improved: CustomPlayer agent using fixed-depth minimax search and the improved_score heuristic\n",
-    "- AB_Null: CustomPlayer agent using fixed-depth alpha-beta search and the null_score heuristic\n",
-    "- AB_Open: CustomPlayer agent using fixed-depth alpha-beta search and the open_move_score heuristic\n",
-    "- AB_Improved: CustomPlayer agent using fixed-depth alpha-beta search and the improved_score heuristic\n",
-    "\n"
+    "These rules are implemented in the `isolation.Board` class provided in the repository. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Estimate the strength rating of student-agent with iterative deepening and\n",
+    "The final evaluation will estimate the strength rating of student-agent with iterative deepening and\n",
     "a custom heuristic evaluation function against fixed-depth minimax and\n",
     "alpha-beta search agents by running a round-robin tournament for the student\n",
-    "agent. Note that all agents are constructed from the student CustomPlayer\n",
-    "implementation, so any errors present in that class will affect the outcome\n",
-    "here.\n",
-    "\n",
-    "The student agent plays a fixed number of \"fair\" matches against each test\n",
+    "agent. The student agent plays a fixed number of \"fair\" matches against each test\n",
     "agent. The matches are fair because the board is initialized randomly for both\n",
     "players, and the players play each match twice -- switching the player order\n",
     "between games. This helps to correct for imbalances in the game due to both\n",
@@ -71,6 +42,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample players\n",
+    "\n",
+    "Collection of player classes for comparison with the custom agent and example heuristic functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -78,12 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"This file contains a collection of player classes for comparison with your\n",
-    "own agent and example heuristic functions.\n",
-    "\"\"\"\n",
-    "\n",
     "from random import randint\n",
-    "\n",
     "\n",
     "def null_score(game, player):\n",
     "    \"\"\"This heuristic presumes no knowledge for non-terminal states, and\n",
@@ -179,6 +154,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom heuristic score: Lock, mobility, and moves with tuned linear function\n",
+    "\n",
+    "\n",
+    "Zero sum function based on player’s mobility (moves / blank_spaces ), and also predicting if one player can lock the other in its next ply:\n",
+    "\n",
+    "- Predict if the player is about to win or lose in the next play when any player has no move available for its next play (cases not detected by game.is_winner() or game.is_loser() due their inactive/active player condition): +inf, -inf\n",
+    "\n",
+    "- Predict, when a player only has one move available, if the other can reach  that cell before by looking among its available moves, thus finishing the   game: +inf, inf\n",
+    "\n",
+    "- The usual scenario is valued as: `score = A * own_mobility + B * opp_mobility + C * own_moves + D * opp_moves`, being the mobility defined as the ratio between the available move for the player and the total available cells of the board, thus the value for looking for more legal moves will be increased when the game is about to end for lack of empty cells. After a few tournaments, the selected parameters were: `A = 10, B = -10, C = 1, D = 0`\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -186,18 +178,9 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "class Timeout(Exception):\n",
-    "    \"\"\"Subclass base exception for code clarity.\"\"\"\n",
-    "    pass\n",
-    "\n",
-    "\n",
     "def custom_score(game, player):\n",
     "    \"\"\"Calculate the heuristic value of a game state from the point of view\n",
     "    of the given player.\n",
-    "\n",
-    "    Note: this function should be called from within a Player instance as\n",
-    "    `self.score()` -- you should not need to call this function directly.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -215,32 +198,6 @@
     "        The heuristic value of the current game state to the specified player.\n",
     "    \"\"\"\n",
     "\n",
-    "    \"\"\"\n",
-    "    # A: Lock, mobility, and moves with tuned linear function heuristic function:\n",
-    "\n",
-    "    Zero sum function based on player’s mobility (moves / blank_spaces ), and\n",
-    "    also predicting if one player can lock the other in its next ply:\n",
-    "\n",
-    "    - Predict if the player is about to win or lose in the next play when any\n",
-    "    player has no move available for its next play (cases not detected by\n",
-    "    game.is_winner() or game.is_loser() due their inactive/active player\n",
-    "    condition): +inf, -inf\n",
-    "\n",
-    "    - Predict, when a player only has one move available, if the other can reach\n",
-    "     that cell before by looking among its available moves, thus finishing the\n",
-    "      game: +inf, inf\n",
-    "\n",
-    "    - The usual scenario is valued as:\n",
-    "    score = A * own_mobility + B * opp_mobility + C * own_moves + D * opp_moves,\n",
-    "    being the mobility defined as the ratio between the available move for the\n",
-    "    player and the total available cells of the board, thus the value for\n",
-    "    looking for more legal moves will be increased when the game is about to\n",
-    "    end for lack of empty cells.\n",
-    "    After a few tournaments, the selected parameters were:\n",
-    "    A = 10, B = -10, C = 1, D = 0\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
     "    if game.is_loser(player):\n",
     "        return float(\"-inf\")\n",
     "    if game.is_winner(player):\n",
@@ -253,7 +210,7 @@
     "    opp_moves = len(opp_moves_list)\n",
     "\n",
     "    # game.is_loser() game.is_winner depends on the active player.\n",
-    "    #  These cases can occur. e.g.: Opponent has no moves while Own is active\n",
+    "    # These cases can occur. e.g.: Opponent has no moves while Own is active\n",
     "    if opp_moves == 0:\n",
     "        return float(\"inf\")\n",
     "    if own_moves == 0:\n",
@@ -261,7 +218,7 @@
     "    # Thus we can predict 1 ply more\n",
     "\n",
     "    # This easy killing move  can also be predicted:\n",
-    "    #  Lock the opponent if, in your turn, you can get to its unique move:\n",
+    "    # Lock the opponent if, in your turn, you can get to its unique move\n",
     "    if (player == game.active_player and opp_moves == 1 and\n",
     "        opp_moves_list[0] in own_moves_list):\n",
     "        return float(\"inf\")\n",
@@ -277,15 +234,33 @@
     "\n",
     "    score = 10*(own_mobility - opp_mobility) + own_moves\n",
     "\n",
-    "    return float(score)\n",
+    "    return float(score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Player\n",
     "\n",
+    "Game-playing agent that chooses a move using your evaluation function and a depth-limited minimax algorithm with alpha-beta pruning; also making sure it properly uses minimax and alpha-beta to return a good move before the search time limit expires.\n",
+    "    \n",
     "\n",
+    "- `CustomPlayer.minimax()`:   implement minimax search\n",
+    "- `CustomPlayer.alphabeta()`: implement minimax search with alpha-beta pruning\n",
+    "- `CustomPlayer.get_move()`:  implement fixed-depth and iterative deepening search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "class CustomPlayer:\n",
-    "    \"\"\"Game-playing agent that chooses a move using your evaluation function\n",
-    "    and a depth-limited minimax algorithm with alpha-beta pruning. You must\n",
-    "    finish and test this player to make sure it properly uses minimax and\n",
-    "    alpha-beta to return a good move before the search time limit expires.\n",
-    "\n",
+    "    \"\"\"\n",
     "    Parameters\n",
     "    ----------\n",
     "    search_depth : int (optional)\n",
@@ -577,12 +552,19 @@
     "                #  (maximazing player)\n",
     "                beta = min(beta, score)\n",
     "\n",
-    "        return score, move\n"
+    "        return score, move"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Game setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -607,7 +589,11 @@
     "                  \"tournament play.\"\n",
     "\n",
     "\n",
-    "Agent = namedtuple(\"Agent\", [\"player\", \"name\"])"
+    "Agent = namedtuple(\"Agent\", [\"player\", \"name\"])\n",
+    "\n",
+    "class Timeout(Exception):\n",
+    "    \"\"\"Subclass base exception for code clarity.\"\"\"\n",
+    "    pass"
    ]
   },
   {
@@ -619,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -674,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -715,6 +701,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Evaluation\n",
+    "\n",
+    "\n",
     "This section evaluates the performance of the custom heuristic function by\n",
     "comparing the strength of an agent using iterative deepening (ID) search with\n",
     "alpha-beta pruning against the strength rating of agents using other heuristic\n",
@@ -722,12 +711,28 @@
     "performance of a basic agent using Iterative Deepening and the \"improved\"\n",
     "heuristic (from lecture) on your hardware.  The `Student` agent then measures\n",
     "the performance of Iterative Deepening and the custom heuristic against the\n",
-    "same opponents."
+    "same opponents.\n",
+    "\n",
+    "\n",
+    "Effectiveness of your custom_score heuristic.  The script measures relative performance of your agent (called \"Student\") in a round-robin tournament against several other pre-defined agents.  The Student agent uses time-limited Iterative Deepening and the custom_score heuristic you wrote.\n",
+    "\n",
+    "The performance of time-limited iterative deepening search is hardware dependent (faster hardware is expected to search deeper than slower hardware in the same amount of time).  The script controls for these effects by also measuring the baseline performance of an agent called \"ID_Improved\" that uess Iterative Deepening and the improved_score heuristic from `sample_players.py`.  Your goal is to develop a heuristic such that Student outperforms ID_Improved.\n",
+    "\n",
+    "The tournament opponents are listed below. (See also: sample heuristics and players defined in sample_players.py)\n",
+    "\n",
+    "- Random: An agent that randomly chooses a move each turn.\n",
+    "- MM_Null: CustomPlayer agent using fixed-depth minimax search and the null_score heuristic\n",
+    "- MM_Open: CustomPlayer agent using fixed-depth minimax search and the open_move_score heuristic\n",
+    "- MM_Improved: CustomPlayer agent using fixed-depth minimax search and the improved_score heuristic\n",
+    "- AB_Null: CustomPlayer agent using fixed-depth alpha-beta search and the null_score heuristic\n",
+    "- AB_Open: CustomPlayer agent using fixed-depth alpha-beta search and the open_move_score heuristic\n",
+    "- AB_Improved: CustomPlayer agent using fixed-depth alpha-beta search and the improved_score heuristic\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -743,18 +748,18 @@
       "\n",
       "Playing Matches:\n",
       "----------\n",
-      "  Match 1: ID_Improved vs   Random    \tResult: 18 to 2\n",
-      "  Match 2: ID_Improved vs   MM_Null   \tResult: 18 to 2\n",
-      "  Match 3: ID_Improved vs   MM_Open   \tResult: 16 to 4\n",
-      "  Match 4: ID_Improved vs MM_Improved \tResult: 15 to 5\n",
-      "  Match 5: ID_Improved vs   AB_Null   \tResult: 16 to 4\n",
-      "  Match 6: ID_Improved vs   AB_Open   \tResult: 17 to 3\n",
+      "  Match 1: ID_Improved vs   Random    \tResult: 19 to 1\n",
+      "  Match 2: ID_Improved vs   MM_Null   \tResult: 17 to 3\n",
+      "  Match 3: ID_Improved vs   MM_Open   \tResult: 6 to 14\n",
+      "  Match 4: ID_Improved vs MM_Improved \tResult: 14 to 6\n",
+      "  Match 5: ID_Improved vs   AB_Null   \tResult: 15 to 5\n",
+      "  Match 6: ID_Improved vs   AB_Open   \tResult: 20 to 0\n",
       "  Match 7: ID_Improved vs AB_Improved \tResult: 20 to 0\n",
       "\n",
       "\n",
       "Results:\n",
       "----------\n",
-      "ID_Improved         85.71%\n",
+      "ID_Improved         79.29%\n",
       "\n",
       "*************************\n",
       "   Evaluating: Student   \n",
@@ -762,18 +767,18 @@
       "\n",
       "Playing Matches:\n",
       "----------\n",
-      "  Match 1:   Student   vs   Random    \tResult: 18 to 2\n",
+      "  Match 1:   Student   vs   Random    \tResult: 19 to 1\n",
       "  Match 2:   Student   vs   MM_Null   \tResult: 17 to 3\n",
-      "  Match 3:   Student   vs   MM_Open   \tResult: 15 to 5\n",
-      "  Match 4:   Student   vs MM_Improved \tResult: 12 to 8\n",
-      "  Match 5:   Student   vs   AB_Null   \tResult: 16 to 4\n",
+      "  Match 3:   Student   vs   MM_Open   \tResult: 17 to 3\n",
+      "  Match 4:   Student   vs MM_Improved \tResult: 15 to 5\n",
+      "  Match 5:   Student   vs   AB_Null   \tResult: 17 to 3\n",
       "  Match 6:   Student   vs   AB_Open   \tResult: 20 to 0\n",
       "  Match 7:   Student   vs AB_Improved \tResult: 20 to 0\n",
       "\n",
       "\n",
       "Results:\n",
       "----------\n",
-      "Student             84.29%\n"
+      "Student             89.29%\n"
      ]
     }
    ],
