feat: new isolation results

--- a/isolation_player.ipynb
+++ b/isolation_player.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "# Game-playing Agent\n",
     "\n",
-    "Notebook version solving **Build a Game-playing Agent** from Udacity's Artificial Intelligence Nanodegree project <br>\n",
+    "Notebook version solving the project '**Build a Game-playing Agent**' from Udacity's Artificial Intelligence Nanodegree project <br>\n",
     "Source: https://github.com/udacity/AIND-Isolation\n",
     "\n",
     "**Goal**: Implement an effective adversarial search agent to play the game **Isolation**\n",
@@ -299,16 +299,6 @@
     "        \"\"\"Search for the best move from the available legal moves and return a\n",
     "        result before the time limit expires.\n",
     "\n",
-    "        This function must perform iterative deepening if self.iterative=True,\n",
-    "        and it must use the search method (minimax or alphabeta) corresponding\n",
-    "        to the self.method value.\n",
-    "\n",
-    "        **********************************************************************\n",
-    "        NOTE: If time_left < 0 when this function returns, the agent will\n",
-    "              forfeit the game due to timeout. You must return _before_ the\n",
-    "              timer reaches 0.\n",
-    "        **********************************************************************\n",
-    "\n",
     "        Parameters\n",
     "        ----------\n",
     "        game : `isolation.Board`\n",
@@ -333,20 +323,12 @@
     "\n",
     "        self.time_left = time_left\n",
     "\n",
-    "        # Perform any required initializations, including selecting an initial\n",
-    "        # move from the game board (i.e., an opening book), or returning\n",
-    "        # immediately if there are no legal moves\n",
-    "\n",
     "        move = None\n",
     "\n",
     "        if not legal_moves:\n",
     "            return -1, -1\n",
     "\n",
     "        try:\n",
-    "            # The search method call (alpha beta or minimax) should happen in\n",
-    "            # here in order to avoid timeout. The try/except block will\n",
-    "            # automatically catch the exception raised by the search method\n",
-    "            # when the timer gets close to expiring\n",
     "\n",
     "            if self.iterative:  # Iterative search\n",
     "                depth = 1\n",
@@ -370,12 +352,9 @@
     "                    _, move = self.alphabeta(game, self.search_depth)\n",
     "\n",
     "        except Timeout:\n",
-    "            # Handle any actions required at timeout, if necessary\n",
     "            pass\n",
     "\n",
     "        # Return the best move from the last completed search iteration\n",
-    "        # assert move is not None, \"Returned no move!\"\n",
-    "        # assert move in legal_moves, (move, legal_moves)\n",
     "        return move\n",
     "\n",
     "\n",
@@ -405,16 +384,9 @@
     "        tuple(int, int)\n",
     "            The best move for the current branch; (-1, -1) for no legal moves\n",
     "\n",
-    "        Notes\n",
-    "        -----\n",
-    "            (1) You MUST use the `self.score()` method for board evaluation\n",
-    "                to pass the project unit tests; you cannot call any other\n",
-    "                evaluation function directly.\n",
     "        \"\"\"\n",
     "        if self.time_left() < self.TIMER_THRESHOLD:\n",
     "            raise Timeout()\n",
-    "\n",
-    "        # Minimax implementation:\n",
     "\n",
     "        legal_moves = game.get_legal_moves()\n",
     "        move = (-1, -1)\n",
@@ -478,17 +450,10 @@
     "\n",
     "        tuple(int, int)\n",
     "            The best move for the current branch; (-1, -1) for no legal moves\n",
-    "\n",
-    "        Notes\n",
-    "        -----\n",
-    "            (1) You MUST use the `self.score()` method for board evaluation\n",
-    "                to pass the project unit tests; you cannot call any other\n",
-    "                evaluation function directly.\n",
     "        \"\"\"\n",
     "        if self.time_left() < self.TIMER_THRESHOLD:\n",
     "            raise Timeout()\n",
     "\n",
-    "        # Alphabeta implementation:\n",
     "\n",
     "        legal_moves = game.get_legal_moves()\n",
     "        move = (-1, -1)\n",
@@ -714,11 +679,9 @@
     "same opponents.\n",
     "\n",
     "\n",
-    "Effectiveness of your custom_score heuristic.  The script measures relative performance of your agent (called \"Student\") in a round-robin tournament against several other pre-defined agents.  The Student agent uses time-limited Iterative Deepening and the custom_score heuristic you wrote.\n",
+    "The performance of time-limited iterative deepening search is hardware dependent (faster hardware is expected to search deeper than slower hardware in the same amount of time).  The script controls for these effects by also measuring the baseline performance of an agent called \"ID_Improved\" that uess Iterative Deepening and the improved_score heuristic from the above sample players.  \n",
     "\n",
-    "The performance of time-limited iterative deepening search is hardware dependent (faster hardware is expected to search deeper than slower hardware in the same amount of time).  The script controls for these effects by also measuring the baseline performance of an agent called \"ID_Improved\" that uess Iterative Deepening and the improved_score heuristic from `sample_players.py`.  Your goal is to develop a heuristic such that Student outperforms ID_Improved.\n",
-    "\n",
-    "The tournament opponents are listed below. (See also: sample heuristics and players defined in sample_players.py)\n",
+    "The tournament opponents are listed below: \n",
     "\n",
     "- Random: An agent that randomly chooses a move each turn.\n",
     "- MM_Null: CustomPlayer agent using fixed-depth minimax search and the null_score heuristic\n",
@@ -749,17 +712,17 @@
       "Playing Matches:\n",
       "----------\n",
       "  Match 1: ID_Improved vs   Random    \tResult: 19 to 1\n",
-      "  Match 2: ID_Improved vs   MM_Null   \tResult: 17 to 3\n",
-      "  Match 3: ID_Improved vs   MM_Open   \tResult: 6 to 14\n",
-      "  Match 4: ID_Improved vs MM_Improved \tResult: 14 to 6\n",
-      "  Match 5: ID_Improved vs   AB_Null   \tResult: 15 to 5\n",
-      "  Match 6: ID_Improved vs   AB_Open   \tResult: 20 to 0\n",
+      "  Match 2: ID_Improved vs   MM_Null   \tResult: 19 to 1\n",
+      "  Match 3: ID_Improved vs   MM_Open   \tResult: 12 to 8\n",
+      "  Match 4: ID_Improved vs MM_Improved \tResult: 12 to 8\n",
+      "  Match 5: ID_Improved vs   AB_Null   \tResult: 14 to 6\n",
+      "  Match 6: ID_Improved vs   AB_Open   \tResult: 19 to 1\n",
       "  Match 7: ID_Improved vs AB_Improved \tResult: 20 to 0\n",
       "\n",
       "\n",
       "Results:\n",
       "----------\n",
-      "ID_Improved         79.29%\n",
+      "ID_Improved         82.14%\n",
       "\n",
       "*************************\n",
       "   Evaluating: Student   \n",
@@ -767,18 +730,18 @@
       "\n",
       "Playing Matches:\n",
       "----------\n",
-      "  Match 1:   Student   vs   Random    \tResult: 19 to 1\n",
-      "  Match 2:   Student   vs   MM_Null   \tResult: 17 to 3\n",
-      "  Match 3:   Student   vs   MM_Open   \tResult: 17 to 3\n",
+      "  Match 1:   Student   vs   Random    \tResult: 20 to 0\n",
+      "  Match 2:   Student   vs   MM_Null   \tResult: 19 to 1\n",
+      "  Match 3:   Student   vs   MM_Open   \tResult: 18 to 2\n",
       "  Match 4:   Student   vs MM_Improved \tResult: 15 to 5\n",
-      "  Match 5:   Student   vs   AB_Null   \tResult: 17 to 3\n",
+      "  Match 5:   Student   vs   AB_Null   \tResult: 15 to 5\n",
       "  Match 6:   Student   vs   AB_Open   \tResult: 20 to 0\n",
       "  Match 7:   Student   vs AB_Improved \tResult: 20 to 0\n",
       "\n",
       "\n",
       "Results:\n",
       "----------\n",
-      "Student             89.29%\n"
+      "Student             90.71%\n"
      ]
     }
    ],
@@ -790,11 +753,7 @@
     "MM_ARGS = {\"search_depth\": 3, \"method\": 'minimax', \"iterative\": False}\n",
     "CUSTOM_ARGS = {\"method\": 'alphabeta', 'iterative': True}\n",
     "\n",
-    "# Create a collection of CPU agents using fixed-depth minimax or alpha beta\n",
-    "# search, or random selection.  =The agent names encode the search method\n",
-    "# (MM=minimax, AB=alpha-beta) and the heuristic function (Null=null_score,\n",
-    "# Open=open_move_score, Improved=improved_score). For example, MM_Open is\n",
-    "# an agent using minimax search with the open moves heuristic.\n",
+    "# Create a collection of CPU agents \n",
     "mm_agents = [Agent(CustomPlayer(score_fn=h, **MM_ARGS),\n",
     "                   \"MM_\" + name) for name, h in HEURISTICS]\n",
     "ab_agents = [Agent(CustomPlayer(score_fn=h, **AB_ARGS),\n",
